objects/zqu__QuoteRatePlan__c.object
<CustomObject>
    <description>A QuoteRatePlan is part of a Quote.</description>
    <fields>
        <fullName>zqu__AmendmentType__c</fullName>
        <description>The type of amendment being made.</description>
        <label>Amendment Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>NewProduct</fullName>
                </value>
                <value>
                    <fullName>RemoveProduct</fullName>
                </value>
                <value>
                    <fullName>TermsAndConditions</fullName>
                </value>
                <value>
                    <fullName>UpdateProduct</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>zqu__ProductRatePlanZuoraId__c</fullName>
        <description>corresponding Id with Product Catalog on remote zuora server</description>
        <label>Product Rate Plan Zuora Id</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zqu__ProductRatePlan__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Quote Rate Plan associated with a Product Rate Plan.</description>
        <label>Product Rate Plan</label>
        <referenceTo>zqu__ProductRatePlan__c</referenceTo>
        <relationshipLabel>Quote Rate Plans</relationshipLabel>
        <relationshipName>Quote_Rate_Plans</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>zqu__QuoteAmendment__c</fullName>
        <description>The identification of the amendment that this quote rate plan applies to.</description>
        <label>Quote Amendment</label>
        <referenceTo>zqu__QuoteAmendment__c</referenceTo>
        <relationshipLabel>Quote Rate Plans</relationshipLabel>
        <relationshipName>Quote_Rate_Plans</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>zqu__QuoteProductName__c</fullName>
        <label>Quote Product Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zqu__QuoteRatePlanZuoraId__c</fullName>
        <description>corresponding Id on remote zuora server</description>
        <externalId>true</externalId>
        <label>Quote Rate Plan Zuora Id</label>
        <length>32</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>zqu__Quote__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Quote Rate Plan associated with a Quote.</description>
        <label>Quote</label>
        <referenceTo>zqu__Quote__c</referenceTo>
        <relationshipLabel>Quote Rate Plans</relationshipLabel>
        <relationshipName>Quote_Rate_Plans</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>zqu__SubscriptionRatePlanZuoraId__c</fullName>
        <description>The identification number of the subscription rate plan that the amendment is modifying. Required if AmendmentType is set to RemoveProduct or UpdateProduct.</description>
        <label>Subscription Rate Plan Zuora Id</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zqu__Time_Product_Added__c</fullName>
        <label>Time Product Added</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Quote Rate Plan</label>
    <listViews>
        <fullName>zqu__All</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>zqu__All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Quote Rate Plan Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Quote Rate Plans</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>